--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="shortcut icon" href="/Amazon/images/nlogo-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/nlogo-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +14,7 @@
         <!-------------------------------- navbar --------------------------------->
         <nav class="navbar">
             <div class="logo">
-                <img src="/Amazon/images/27f5e76f-c71e-467f-9ae9-0262e75a6389.png">
+                <img src="images/27f5e76f-c71e-467f-9ae9-0262e75a6389.png">
             </div>
             <form class="nav_btn">
                 
@@ -49,16 +49,16 @@
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
             <div class="media">
-                <img src="/Amazon/images/tv-removebg-preview.png">
+                <img src="images/tv-removebg-preview.png">
             </div>
         </section>
 
         <!-------------------------------- second section --------------------------------->
         <section class="second">
             <div class="media">
-                <img src="/Amazon/images/2.jpg">
+                <img src="images/2.jpg">
                 <div class="download">
-                    <img src="/Amazon/images/st.jpg">
+                    <img src="images/st.jpg">
                     <div>
                         <p>Stranger Things</p>
                         <p>Downloading...</p>
@@ -80,14 +80,14 @@
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
             <div class="media">
-                <img src="/Amazon/images/thzhe-removebg-preview.png">
+                <img src="images/thzhe-removebg-preview.png">
             </div>
         </section>
 
         <!-------------------------------- fourth section --------------------------------->
         <section class="fourth">
             <div class="media">
-                <img src="/Amazon/images/kid.jpg">
+                <img src="images/kid.jpg">
             </div>
             <div class="info">
                 <h2>Create profiles for kids</h2>
